--- a/vscode.css
+++ b/vscode.css
@@ -1,9 +1,6 @@
 :root {
-    --gradient-dir1: to right bottom;
-    --gradient-dir2: to left top;
-    --gradient-dir3: to right top;
+  --size: 5px;
 }
-
 /* .mtk10,
 .mtk15 {
     color: transparent;
@@ -15,59 +12,58 @@
 
 /* .mtk12, */
 .mtk5 {
-    color: transparent;
-    background-image: linear-gradient(45deg, #11ff00, #00f3ff);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    font-family: "Operator mono";
-    font-style: italic;
-    font-size: 105%;
+  color: transparent;
+  background-image: linear-gradient(45deg, #55ff49, #00f3ff);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  font-family: 'Operator mono';
+  font-style: italic;
+  font-size: 105%;
 }
 
-.mtk16 {
-    /* color: transparent;
-    background-image: linear-gradient(45deg, #ffb86c, #b4ff00);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    font-family: "DM Mono"; */
-    font-family: "Apple Chancery", cursive;
-}
+/* .mtk16 {
+  color: transparent;
+  background-image: linear-gradient(45deg, #ffb86c, #b4ff00);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+} */
 
 /* .mtk11,
 .mtk9, */
 .mtk17 {
-    color: transparent;
-    background-image: linear-gradient(to right, #20e3b2, #3580d6, #2cccff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    font-family: "Operator mono";
+  color: transparent;
+  background-image: linear-gradient(to right, #20e3b2, #3580d6, #2cccff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  font-family: 'Operator mono';
+  font-size: 105%;
 }
 
 .mtk18 {
-    color: transparent;
-    background-image: linear-gradient(to right, #0e4eff, #758cbd, #00eeb7ee);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    font-family: "Operator mono";
-    font-style: italic;
+  /* color: transparent;
+  background-image: linear-gradient(to right, #0e4eff, #758cbd, #00eeb7ee);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text; */
+  font-family: 'Operator mono';
+  font-size: 105%;
+  font-style: italic;
 }
 
-.mtk3 {
-    color: transparent;
-    background-image: linear-gradient(-55deg, #d000ff, #bd93f9);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    font-style: italic;
-    font-family: "Comic Sans MS", cursive;
-    /* Comic Sans, */
-}
+/* .mtk3 {
+  color: transparent;
+  background-image: linear-gradient(-55deg, #d000ff, #bd93f9);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+} */
+
 .mtk14 {
-    color: #ffa473;
+  color: #ffa473;
 }
+
 /* .mtk7 {
     color: transparent;
     background-image: linear-gradient(var(--gradient-dir2), #fc6c8f, #ffb86c);
@@ -77,32 +73,30 @@
 } */
 
 .mtk13 {
-    color: #00b2ca;
+  color: #00b2ca;
 }
 
 .monaco-editor .line-numbers.active-line-number {
-    /* left: 20px !important; */
-    left: 0px !important;
-    color: #cddc39;
+  color: #cddc39;
 }
 
 .menubar-menu-title {
-    color: #05ffba;
-    font-family: "Operator mono";
-    font-style: italic;
-    font-weight: 300;
-    text-transform: lowercase;
+  color: #ff38f7;
+  font-family: 'Operator mono';
+  font-size: 105%;
+  font-style: italic;
+  letter-spacing: 1px;
 }
 
-.monaco-workbench
-    .activitybar
-    > .content
-    :not(.monaco-menu)
-    > .monaco-action-bar
-    .action-item.checked
-    .action-label.codicon {
-    font-size: 24px;
-}
+/* .monaco-workbench
+  .activitybar
+  > .content
+  :not(.monaco-menu)
+  > .monaco-action-bar
+  .action-item.checked
+  .action-label.codicon {
+  font-size: 24px;
+} */
 
 /* .monaco-workbench .part.titlebar > .titlebar-drag-region {
     background-image: linear-gradient(
@@ -114,41 +108,37 @@
 } */
 
 .monaco-editor .cursors-layer .cursor {
-    background-image: linear-gradient(
-        to bottom right,
-        #ff70a6,
-        #b100e8,
-        #4361ee
-    );
+  background-image: linear-gradient(to bottom right, #ff70a6, #b100e8, #4361ee);
 }
 
-.monaco-workbench
-    .part.editor
-    > .content
-    .editor-group-container
-    > .title
-    .tabs-container
-    > .tab.active.tab-border-top
-    > .tab-border-top-container {
-    background-size: 400% 400%;
-    background-image: linear-gradient(
-        -45deg,
-        #fc6c8f,
-        #ff2ced,
-        #ffb86c,
-        #2cccff,
-        #20e3b2,
-        #ffcc70,
-        #c850c0,
-        #4158d0
-    );
-    animation: gradientX 3s ease alternate infinite;
-    position: absolute;
-    height: 6px;
-    top: 0;
-    left: 0;
-    right: 0;
-}
+/* Border Tab active */
+/* .monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active.tab-border-top
+  > .tab-border-top-container {
+  background-size: 400% 400%;
+  background-image: linear-gradient(
+    -45deg,
+    #fc6c8f,
+    #ff2ced,
+    #ffb86c,
+    #2cccff,
+    #20e3b2,
+    #ffcc70,
+    #c850c0,
+    #4158d0
+  );
+  animation: gradientX 3s ease alternate infinite;
+  position: absolute;
+  height: 3px;
+  top: 0;
+  left: 0;
+  right: 0;
+} */
 
 /* .monaco-editor .scroll-decoration {
     display: block;
@@ -170,34 +160,150 @@
 
 .monaco-editor .detected-link,
 .monaco-editor .detected-link-active {
-    text-decoration-color: rgb(139 195 74 / 53%);
+  text-decoration-color: rgb(139 195 74 / 53%);
 }
 
-.monaco-workbench
-    .activitybar
-    > .content
-    :not(.monaco-menu)
-    > .monaco-action-bar
-    .action-label.codicon {
-    color: #fff !important;
-    font-size: inherit;
-}
+/* .monaco-workbench
+  .activitybar
+  > .content
+  :not(.monaco-menu)
+  > .monaco-action-bar
+  .action-label.codicon {
+  color: #fff !important;
+  font-size: inherit;
+} */
 
 .monaco-editor .line-numbers {
-    font-family: "Operator mono";
-    font-style: italic;
-    font-weight: 200;
-    color: #9a86fd;
+  font-family: 'Operator mono';
+  font-style: italic;
+  font-weight: 200;
+  color: #9a86fd;
 }
 
 @keyframes gradientX {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+/* Border Tab active */
+
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active.tab-border-top
+  > .tab-border-top-container {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+}
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active.tab-border-top
+  > .tab-border-top-container:before,
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active.tab-border-top
+  > .tab-border-top-container:after {
+  content: '';
+  width: var(--size);
+  height: var(--size);
+  position: absolute;
+  border: 2px solid;
+  border-image-slice: 1;
+}
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active.tab-border-top
+  > .tab-border-top-container:before {
+  top: 0;
+  left: 0;
+  border-right: 0;
+  border-bottom: 0;
+  border-image-source: linear-gradient(-45deg, #4dd78a, #20e3b2);
+}
+
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active.tab-border-top
+  > .tab-border-top-container:after {
+  right: 0;
+  bottom: 0;
+  border-top: 0;
+  border-left: 0;
+  border-image-source: linear-gradient(-45deg, #6a5af9, #d66efd);
+}
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active:before,
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active:after {
+  content: '';
+  width: var(--size);
+  height: var(--size);
+  position: absolute;
+  border: 2px solid;
+  border-image-slice: 1;
+}
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active:before {
+  left: 0;
+  bottom: 0;
+  border-top: 0;
+  border-right: 0;
+  border-image-source: linear-gradient(-45deg, #fc6c8f, #ffb86c);
+}
+
+.monaco-workbench
+  .part.editor
+  > .content
+  .editor-group-container
+  > .title
+  .tabs-container
+  > .tab.active:after {
+  top: 0;
+  right: 0;
+  border-left: 0;
+  border-bottom: 0;
+  border-image-source: linear-gradient(-45deg, #098dff, #2cccff);
 }
